--- a/README
+++ b/README
@@ -4,7 +4,17 @@ eventicus is a social event community created by Mathias Karstädt
 
 You are free to help developing this project! Just ask me.
 
+== Live
 
-== Getting started
+You can find a production version under the following URLs:
 
-to be done...
+http://eventicus.com
+http://eventicus.de
+
+== LICENSE
+
+Copyright (c) 2010 Mathias Karstädt
+
+This software is provided under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 Unported LIcense:
+
+http://creativecommons.org/licenses/by-nc-sa/3.0/
