--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -6,7 +6,7 @@ de:
   add_new_event_now: Neuen Event erstellen
   add_own_photos: Füge deine eigenen Bilder hinzu!
   about_and_contact: Über uns und Kontakt
-  attend: teilnehmen
+  attend: hingehen
   attending: Bin dabei
   avatar_uploaded: Avatar wurde erfolgreich geändert
   back: Zurück
