Styleanpassungen und Textänderungen

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -7,7 +7,7 @@ de:
   add_own_photos: Füge deine eigenen Bilder hinzu!
   about_and_contact: Über uns und Kontakt
   attend: hingehen
-  attending: Bin dabei
+  attending: sind dabei
   avatar_uploaded: Avatar wurde erfolgreich geändert
   back: Zurück
   blog: Blog
