changed size of Facebook Fan Box

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -10,6 +10,7 @@ de:
   attending: sind dabei
   avatar_uploaded: Avatar wurde erfolgreich geändert
   back: Zurück
+  become_fan: Werde Fan
   blog: Blog
   city_cloud: City Cloud
   cancel: Abbrechen
