--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,6 +10,7 @@ en:
   attending: Attending
   avatar_uploaded: Avatar was successfully updated
   back: Back
+  become_fan: Become a Fan
   blog: Blog
   city_cloud: City Cloud
   cancel: Cancel
