Added meta tags for Facebook Share and some SEO improvements

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -79,6 +79,7 @@ de:
   not_listed_venue: Nicht gefunden? Neuen Veranstaltungsort anlegen...
   not_tagged_photos: Zu diesem Event wurden keine Bilder gefunden
   no_comments: Es wurden noch keine Kommentare geschrieben
+  onnn: auf
   or_login_using_facebook_connect: Oder melden Sie sich über Facebook an...
   or_signup_using_facebook_connect: Oder registrieren Sie sich über Facebook Connect...
   password: Passwort
