--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -79,6 +79,7 @@ en:
   not_listed_venue: Not listet? Add a new venue...
   not_tagged_photos: There are no photos for this event yet!
   no_comments: No comments by now
+  onnn: on
   or_login_using_facebook_connect: Or login using Facebook Connect...
   or_signup_using_facebook_connect: Or sign up using Facebook Connect...
   password: Password
