--- a/README
+++ b/README
@@ -4,6 +4,22 @@ eventicus is a social event community created by Mathias Karstädt
 
 You are free to help developing this project! Just ask me.
 
+== Prerequisites
+
+  * Rails 2.3.8
+  * MySQL
+  * memcached
+  * Passenger + nginx
+  
+== Installation
+
+  * git clone git@github.com:webmatze/eventicus.de.git
+  * rake gems:install
+  * edit config/database.yml to your connection details
+  * edit config/facebooker.yml
+  * edit config/deploy.rb
+  * rake db:migration
+
 == Live
 
 You can find a production version under the following URLs:
@@ -13,8 +29,17 @@ http://eventicus.de
 
 == LICENSE
 
-Copyright (c) 2010 Mathias Karstädt
+Copyright (c) 2011 Mathias Karstädt
 
-This software is provided under the Creative Commons Attribution-Noncommercial-Share Alike 3.0 Unported LIcense:
+This program is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
 
-http://creativecommons.org/licenses/by-nc-sa/3.0/
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
