--- a/README
+++ b/README
@@ -10,11 +10,11 @@ You are free to help developing this project! Just ask me.
   * MySQL
   * memcached
   * Passenger + nginx
-  
+
 == Installation
 
   * git clone git@github.com:webmatze/eventicus.de.git
-  * rake gems:install
+  * bundle
   * edit config/database.yml to your connection details
   * edit config/facebooker.yml
   * edit config/deploy.rb
@@ -24,8 +24,8 @@ You are free to help developing this project! Just ask me.
 
 You can find a production version under the following URLs:
 
-http://eventicus.com
-http://eventicus.de
+http://eventicus.com (not running anymore)
+http://eventicus.de (not running anymore)
 
 == LICENSE
 
